<resources>
    <string name="app_name">TunaCoffee</string>
    <string name="home">Trang chủ</string>
    <string name="Menu">Menu</string>
    <string name="Cart">Giỏ hàng</string>
    <string name="Order">Đơn hàng</string>
    <string name="notification">Thông báo</string>
    <string name="text">Đây là 1 đoạn text</string>
    <string name="onboarding1">Thương hiệu bắt nguồn từ cà phê Việt Nam</string>
    <string name="onboarding2">Cà Phê phin Highlands Coffee là sản phẩm được sản xuất theo công nghệ tiên tiến trên dây chuyền hiện đại</string>
    <string name="onboarding3">Nguyên liệu tạo nên sản phẩm được chọn lọc kĩ càng từ những vườn cà phê chất lượng nhất của Việt Nam</string>
    <string name="title1">Thức uống được yêu thích</string>
    <string name="title2">Ưu đãi đặc biệt hôm nay</string>
    <string name="title3">Khám phá thêm thức uống</string>
    <string name="welcome">Chào bạn!</string>
    <string name="welcome2">Tham gia chương trình thành viên của chúng tôi để tích điểm và nhận quà</string>
    <string name="price">price</string>
    <string name="VNĐ">VNĐ</string>
    <string name="rating">Đánh giá</string>
    <string name="quantity">quantity</string>
    <string name="emailHint">Email</string>
    <string name="fullname">Họ và tên</string>
    <string name="password">Mật khẩu</string>
    <string name="rePass">Nhập lại mật khẩu</string>
    <string name="forgotPassword">Quên mật khẩu</string>
    <string name="Register">Đăng ký</string>
    <string name="Login">Đăng nhập</string>
    <string name="title_member">Thông tin về chương trình</string>
    <string name="text2">text</string>
    <string name="vat">Giá bán đã bao gồm thuế 8% VAT, áp dụng từ ngày 01/01/2022 đến 31/12/2022</string>
    <string name="confirm_delete">Bạn có chắc muốn xóa tất cả không?</string>
    <string name="phoneNumber">Số điện thoại nhận hàng</string>
    <string name="address_order">Địa chỉ giao hàng</string>
    <string name="payment">Đặt hàng</string>
    <string name="complete_order">Hoàn tất quá trình đặt hàng</string>
    <string name="product_favourite">Sản phẩm yêu thích</string>
    <string name="Shipping">Giao hàng</string>
    <string name="Pick_up_at_the_shop">Đến lấy</string>
    <string name="select_shop">Chọn cửa hàng đến lấy</string>
    <string name="list_shop">Danh sách cửa hàng</string>
    <string name="tuna_coffee_shop">Tuna Coffee Shop</string>
    <string name="empty_cart">Không có sản phẩm nào trong giỏ hàng</string>
    <string name="order_information">Thông tin đơn hàng</string>
    <string name="detail_order">Chi tiết đơn hàng</string>
    <string name="cancel_order">Hủy đơn hàng</string>
    <string name="purchase_method_ship">Phương thức mua hàng: Giao hàng</string>
    <string name="purchase_method_pick_up">Phương thức mua hàng: Tới cửa hàng lấy</string>
    <string name="cancel_text">Đơn hàng chỉ có thể hủy khi đang ở trạng thái chuẩn bị thức uống !</string>
    <string name="rateForMore">Đánh giá đúng chất lượng giúp chúng tôi có thể tiếp tục phát huy ưu điểm và khắc phục những nhược điểm</string>
    <string name="list_order">Danh sách sản phẩm</string>
    <string name="rating_coffee">Đánh giá thức uống</string>
    <string name="hintRate">Trải nghiệm của bạn về thức uống như thế nào?</string>
    <string name="add_image">Đăng tải hình ảnh</string>
    <string name="send_rate">Gửi đánh giá</string>
    <string name="thanks">Cảm ơn bạn đã đánh giá sản phẩm của chúng tôi</string>
    <string name="titlemember">Nội dung chương trình</string>
    <string name="account">Tài khoản</string>
    <string name="report_review">Báo cáo đánh giá này</string>
    <string name="facebook"><a href="https://www.facebook.com/tuan.nguyxn">Facebook cá nhân : Nguyễn Giản Tuấn</a></string>
    <string name="instagram"><a href="https://www.instagram.com/_imfox_/">Instagram : _imfox_</a></string>
    <string name="github"><a href="https://github.com/gtuan201">Github :gtuan201</a></string>
    <string name="question_cancel">Bạn có muốn hủy đơn hàng này không?</string>
    <string name="reason_to_best">Lý do hủy có thể giúp chúng tôi cả thiện chất lượng hơn. Cảm ơn những đóng góp của bạn</string>
</resources>