<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#272727"
        android:padding="10dp">
        <TextView
            android:text="@string/complete_order"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/namePayment"
            android:hint="@string/fullname"
            android:textSize="17sp"
            android:textColorHint="@color/grey"
            android:padding="10dp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edit_text4"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/phoneNumberPayment"
            android:hint="@string/phoneNumber"
            android:textSize="17sp"
            android:textColorHint="@color/grey"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:inputType="number"
            android:padding="10dp"
            android:background="@drawable/custom_edit_text4"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/addressPayment"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:hint="@string/address_order"
            android:padding="10dp"
            android:background="@drawable/custom_edit_text4"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btCompletePayment"
            android:background="@drawable/button_custom2"
            android:layout_marginTop="20dp"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/payment"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>