<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:background="@drawable/img_8">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/login_logo"
        app:civ_border_color="#F14E4E"
        app:civ_border_width="1dp" />
    <LinearLayout
        android:id="@+id/layout_account"
        android:layout_below="@id/logo"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:text="Đăng ký tài khoản"
            android:textColor="@color/white"
            android:textSize="27sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/etEmailRegister"
            android:inputType="textEmailAddress"
            android:textSize="17sp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_custom"
            android:hint="@string/emailHint"
            android:textColorHint="#F6F6F6"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etFullnameRegister"
            android:inputType="textEmailAddress"
            android:textSize="17sp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_custom"
            android:hint="@string/fullname"
            android:textColorHint="#F6F6F6"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etPasswordRegister"
            android:inputType="textPassword"
            android:textSize="17sp"
            android:padding="10dp"
            android:layout_marginTop="10sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_custom"
            android:hint="@string/password"
            android:textColorHint="#F6F6F6"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etRePasswordRegister"
            android:inputType="textPassword"
            android:textSize="17sp"
            android:padding="10dp"
            android:layout_marginTop="10sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_custom"
            android:hint="@string/rePass"
            android:textColorHint="#F6F6F6"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btRegister"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_below="@id/layout_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_custom3"
        android:text="@string/Register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp" />
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="Bạn đã có tài khoản?"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvLogin"
            android:text="Đăng nhập"
            android:layout_marginStart="5dp"
            android:textColor="@color/dark_brown"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>