<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ContactActivity"
    android:background="#101010">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btBackContact"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thông tin liên hệ"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />
    </LinearLayout>
    <TextView
        android:id="@+id/facebook"
        android:layout_marginTop="10dp"
        android:textColorLink="@color/white"
        android:text="@string/facebook"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:paddingStart="7dp"
        app:drawableStartCompat="@drawable/facebook" />
    <TextView
        android:id="@+id/instagram"
        android:layout_marginTop="10dp"
        android:textColorLink="@color/white"
        android:text="@string/instagram"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:paddingStart="7dp"
        app:drawableStartCompat="@drawable/instagram" />
    <TextView
        android:id="@+id/github"
        android:layout_marginTop="10dp"
        android:textColorLink="@color/white"
        android:text="@string/github"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:paddingStart="7dp"
        app:drawableStartCompat="@drawable/github" />
    <TextView
        android:id="@+id/phone"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="Số điện thoại: 0826398804 "
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:paddingStart="7dp"
        app:drawableStartCompat="@drawable/phone_call" />
</LinearLayout>