<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeFragment"
    android:orientation="vertical"
    android:background="#171717">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/home"
            android:drawablePadding="5dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/house" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_baseline_settings_24" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar_user"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/user"
                app:civ_border_color="@color/white"
                app:civ_border_width="1dp" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/dark_grey" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="#494747" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/layout_welcome"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_welcome"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome2"
                        android:textColor="@color/white" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btMember"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button_custom1"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="Đăng ký thành viên"
                        android:textAllCaps="false"
                        android:textColor="#F11D1D"
                        android:textSize="12sp" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/btGoToInformationMembership"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/cirle_button"
                    android:src="@drawable/arrow_right_img" />

            </RelativeLayout>
            <TextView
                android:text="@string/title2"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/slider_news"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                app:auto_cycle="true"
                app:corner_radius="20"
                app:delay="0"
                app:error_image="@color/black"
                app:period="2000"
                app:placeholder="@color/white"
                app:selected_dot="@drawable/default_selected_dot"
                app:unselected_dot="@drawable/default_unselected_dot" />

            <TextView
                android:text="@string/title1"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rev_home"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/title3"
                    android:layout_centerVertical="true"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_more"
                    android:text="Tất cả"
                    android:drawableEnd="@drawable/ic_baseline_arrow_right_24"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:textColor="#F3E88A"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rev_home2"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:src="@drawable/ending_coffee"
                android:layout_gravity="center_horizontal"
                android:layout_width="64dp"
                android:layout_height="64dp"/>

            <TextView
                android:textStyle="italic"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Đến đây là hết rồi. Xin cảm ơn !"
                android:textColor="#EF962B" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>