<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#171717"
    tools:context=".activity.DetailActivity">
    <RelativeLayout
        android:id="@+id/layout_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="match_parent"
            android:layout_height="243dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <ImageButton
            android:id="@+id/btBackDetail"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_background2"
            android:paddingStart="7dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btFavorite"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@color/transparent" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="230dp"
        android:background="@drawable/rounded_top_background"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bt_add_to_cart"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCoffeeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/text"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_background2"
                    android:padding="5dp"
                    android:text="@string/text"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/price"
                    android:textColor="@color/light_brown"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:text="@string/VNĐ"
                    android:textColor="@color/light_brown"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="("
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tvQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/quantity"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text=")"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout_Detail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:background="@drawable/tab_background"
                app:tabIndicatorColor="#00FFFFFF"
                app:tabIndicatorHeight="1dp"
                app:tabSelectedTextColor="@color/light_brown" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="3dp"
            android:id="@+id/bt_add_to_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button_custom2"
            android:text="Tiến hành đặt hàng"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </RelativeLayout>

</RelativeLayout>